# kpi-devops-3

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  MyTrigFunction.cpp  MyTrigFunction.h  README.md  configure.ac  httpServer.cpp  httpServer.h  main.cpp  run-docker.sh
.github/workflows/: autoMakeBuild.yml  autoMakeBuildTest.yml  build.yml  debianPackage.yml
debian/: changelog  control
tests/: test_funcA.cpp
