# Package metadata
AC_INIT([trigonometry], [0.1], [barskyi.glib@lil.kpi.ua])

# Auxiliary scripts location
AC_CONFIG_AUX_DIR([build-aux])

# Initialize Automake
AM_INIT_AUTOMAKE

# Check for a working C++ compiler
AC_PROG_CXX

# Generate Makefiles
AC_CONFIG_FILES([Makefile])

# Output configuration
AC_OUTPUT